--- a/Tema_4_lexico.tex
+++ b/Tema_4_lexico.tex
@@ -1,11 +1,10 @@
 \documentclass[12pt]{article}
-\usepackage[colorlinks,linkcolor=blue,citecolor=blue]{hyperref}
+\usepackage[dvips,colorlinks=true,linkcolor=blue,citecolor=black]{hyperref}
 \usepackage[spanish,es-noquoting]{babel}
-\usepackage[anythingbreaks]{breakurl}
 %\usepackage{pstricks}
 %\usepackage{pst-jtree}
 %\usepackage{pst-node}
-%\usepackage[utf8]{inputenc}
+\usepackage[utf8]{inputenc}
 %\usepackage[expert,uprightgreek,altbullet]{lucidabr}
 \usepackage[T1]{fontenc}
 \usepackage{textcomp}
@@ -22,7 +21,7 @@
 \usepackage[sort]{natbib}
 \usepackage{enumitem}
 \everymath={\rm}
-\bibpunct{[}{]}{;}{a}{}{,}
+\bibpunct{(}{)}{,}{a}{}{;}
 
  \DeclareOldFontCommand{\rm}{\normalfont\rmfamily}{\mathrm}
 
@@ -67,11 +66,11 @@ Material elaborado a partir de~\cite{bosque1982sobre-la-teoria,bosque2004combina
 
 %\bibliographystyle{linquiry2esp}
 %\bibliography{BibFileTGR}
-\printbibliography
+\
 
 \section{El lexicon}
 \begin{itemize}
-  \item El \href{https://dle.rae.es/?w=diccionario}{\psframebox{DLE}} de la RAE contiene en su última edición 93 111 entradas.
+  \item El \href{https://dle.rae.es/?w=diccionario}{DLE} de la RAE contiene en su última edición 93 111 entradas.
 \end{itemize}
 
 
