--- a/Tema_4_lexico.tex
+++ b/Tema_4_lexico.tex
@@ -1,5 +1,4 @@
 \documentclass[12pt]{article}
-\usepackage[dvips,colorlinks=true,linkcolor=blue,citecolor=black]{hyperref}
 \usepackage[spanish,es-noquoting]{babel}
 %\usepackage{pstricks}
 %\usepackage{pst-jtree}
@@ -20,6 +19,7 @@
 \usepackage{makecell}
 \usepackage[sort]{natbib}
 \usepackage{enumitem}
+\usepackage[dvips,colorlinks=true,linkcolor=blue,citecolor=black]{hyperref}
 \everymath={\rm}
 \bibpunct{(}{)}{,}{a}{}{;}
 
@@ -69,17 +69,8 @@ Material elaborado a partir de~\cite{bosque1982sobre-la-teoria,bosque2004combina
 \
 
 \section{El lexicon}
-\begin{itemize}
-  \item El \href{https://dle.rae.es/?w=diccionario}{DLE} de la RAE contiene en su última edición 93 111 entradas.
-\end{itemize}
 
-
-El \textbf{lexicón} como diccionario interno o mental, el \textbf{lexicón mental}.
-\begin{itemize}
-  \item El lexicón mental de un hablante medio contiene 250 000 entradas.
-\end{itemize}
-
-
+El \href{https://dle.rae.es/?w=diccionario}{DLE} de la RAE contiene en su última edición 93 111 entradas. El \textbf{lexicón} como diccionario interno o mental, el \textbf{lexicón mental}. El lexicón mental de un hablante medio contiene 250 000 entradas.
 
 \section{¿Qué es una palabra?}
 \section{El significado de las palabras}
