--- a/Tema_4_lexico.tex
+++ b/Tema_4_lexico.tex
@@ -61,7 +61,7 @@ Doble Grado en Humanidades y Magisterio de Educación Primaria
 
 \tableofcontents
 
-Material elaborado a partir de~\textcite{bosque1982sobre-la-teoria,bosque2004combinatoria-y-signi,murphy2010lexicalmeaning,jezek2015the-lexicon-an,pustejovsky2019the-lexicon} y ~\textcite[caps. «Lexicología» y «Diccionarios»][]{2016enciclopedia-de-linguistica}.
+Material elaborado a partir de~\textcite{bosque1982sobre-la-teoria,bosque2004combinatoria-y-signi},~\textcite{murphy2010lexicalmeaning},~\textcite{jezek2015the-lexicon-an},~\textcite{pustejovsky2019the-lexicon} y ~\textcite[caps. «Lexicología» y «Diccionarios»][]{2016enciclopedia-de-linguistica}.
 %\cite{Jezek2015The-lexicon-an}
 %\cite{Bosque1982Sobre-la-teoria}
 %\cite[cap. «Lexicología»]{2016Enciclopedia-de-Linguistica}
