--- a/lenguaje-funciona.tex
+++ b/lenguaje-funciona.tex
@@ -4,13 +4,15 @@
 \usepackage[spanish]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
+\usepackage{Alegreya} %% Option 'black' gives heavier bold face 
 \usepackage[T1]{fontenc}
 \usepackage{textcomp}
-\usepackage[altbullet]{lucidabr}   
+%\usepackage[altbullet]{lucidabr}   
 \usepackage{adjustbox}
  \usepackage{pstricks}
    \usepackage{pst-jtree}
-\usepackage{qtree}
+\usepackage{expex}
+   %\usepackage{qtree}
 \usepackage{tipa}
 %\usepackage{covington}
 \usepackage{float}
@@ -186,16 +188,15 @@ Esta representación es la causa del comportamiento verbal que observamos.
 \subsection{La noción de nivel de representación}
 	\begin{frame}
 	\frametitle{La suma de los niveles de representación es una oración}
-	El soldado llegó
-	\begin{exe}
-	  \ex Análisis fonológico: \textipa{[elsolda\dh oJeGo]}
-	  \ex Análisis silábico: $[_\sigma$\textipa{el}$]$$[_\sigma$\textipa{sol}$]$$[_\sigma$\textipa{da}$]$$[_\sigma$\textipa{Do}$]$$[_\sigma$\textipa{Je}$]$$[_\sigma$\textipa{Go}$]$
-	    \ex Análisis morfológico:\\ \textipa{el}[\textsc{det. masc. sing
+	\pex[*] El soldado llegó
+	
+\a Análisis fonológico: \textipa{[elsolda\dh oJeGo]}
+\a Análisis silábico: $[_\sigma$\textipa{el}$]$$[_\sigma$\textipa{sol}$]$$[_\sigma$\textipa{da}$]$$[_\sigma$\textipa{Do}$]$$[_\sigma$\textipa{Je}$]$$[_\sigma$\textipa{Go}$]$
+\a Análisis morfológico:\\ \textipa{el}[\textsc{det. masc. sing
 	    3p}]\\
 	    \textipa{solda\dh o}[\textsc{n masc. sg. 3p}]\\
 	    \textipa{JeGo}[\textsc{v pres. sg. 3p}]
-
-	\end{exe}
+\xe
 	\end{frame}
 
 
@@ -294,14 +295,11 @@ Esta representación es la causa del comportamiento verbal que observamos.
 	\begin{frame}
 	\frametitle{Análisis de errores}
 
-	\begin{enumerate}
-	\item[(6)a] \ldots an indigent sex-\alert{offens}er (Elección de raíz derivativa: \alert{offend}er)
-
-	\item[(6)b]  I can see a time in the no distan\alert{ce} future. (Sufijo derivativo: dista\alert{nt})
-
-	\item[(6)c] \ldots kill two \alert{stone}s with a \alert{bird} \ldots (Cambio de palabra: \alert{bird}s - \alert{stone})
-
-	\end{enumerate}
+	\pex[*]
+\a \ldots an indigent sex-\alert{offens}er (Elección de raíz derivativa: \alert{offend}er)
+\a I can see a time in the no distan\alert{ce} future. (Sufijo derivativo: dista\alert{nt})
+\a \ldots kill two \alert{stone}s with a \alert{bird} \ldots (Cambio de palabra: \alert{bird}s - \alert{stone})
+\xe
 	\end{frame}
 
 	\begin{frame}
@@ -309,19 +307,17 @@ Esta representación es la causa del comportamiento verbal que observamos.
 	\frametitle{Afasia de Broca: jerga agramatical}
 
 	FS: afasia a causa de infarto cerebral
-	\begin{enumerate}
-	\item[(7)a] \ldots poi ancora spesso \alert{andare} [allo] studio. [In] via C. [a] il Pariolo
-	\begin{itemize}
-	  \item Ausencia de flexión verbal = \alert{andare} por \alert{vado} (1sg presente)
-	\end{itemize}
-	\item[(7)b] \ldots c'e \alert{la mia studia} ancora aperto.
-	\begin{itemize}
+	\pex[*]
+\a \ldots poi ancora spesso \alert{andare} [allo] studio. [In] via C. [a] il Pariolo
+\a Ausencia de flexión verbal = \alert{andare} por \alert{vado} (1sg presente)
+\a \ldots c'e \alert{la mia studia} ancora aperto.
+\xe
+	
+\begin{itemize}
 	  \item Elección incorrecta de la flexión nominal = morfemas
 	  femeninos, l\alert{a} mi\alert{a} studi\alert{a}, por morfemas masculinos, \alert{e}l mi\alert{o} studi\alert{o}
 	\end{itemize}
-	\end{enumerate}
-
-	\end{frame}
+\end{frame}
 
 
 
@@ -331,7 +327,6 @@ Esta representación es la causa del comportamiento verbal que observamos.
 	\item FS no tiene problemas a la hora de seleccionar el lexema
 	correcto con el significado adecuado. No presenta una parafasia
 	semántica.
-
 	\item FS presenta rasgos de agramatismo: problemas a la hora de
 	construir sintácticamente la oración.
 	\end{itemize}
@@ -360,7 +355,7 @@ Esta representación es la causa del comportamiento verbal que observamos.
 	\begin{itemize}
 	\item \emph{car}-\alert{o} (masc. sg.) por \emph{car}-\alert{i} (masc.
 	pl.), \emph{car}-\alert{a} (fem. sg.), \emph{car}-\alert{e} (fem.
-	pl.) (Un ánico morfema flexivo para todo el paradigma)
+	pl.) (Un único morfema flexivo para todo el paradigma)
 	\item \emph{fort}-\alert{e} (masc/fem. sg.) por \emph{fort}-\alert{i} (masc/fem. pl.).
 	\end{itemize}
 
