--- a/lenguaje-funciona.tex
+++ b/lenguaje-funciona.tex
@@ -1,4 +1,4 @@
-\listfiles
+%\listfiles
 \makeatletter\let\ifGm@compatii\relax\makeatother
 \documentclass[compress]{beamer}
 \usepackage[spanish]{babel}
@@ -10,11 +10,9 @@
 %\usepackage[altbullet]{lucidabr}   
 \usepackage{adjustbox}
  \usepackage{pstricks}
-   \usepackage{pst-jtree}
+  \usepackage{pst-jtree}
 \usepackage{expex}
-   %\usepackage{qtree}
 \usepackage{tipa}
-%\usepackage{covington}
 \usepackage{float}
 \usepackage{gb4e}
 
@@ -30,7 +28,7 @@
 
 	\title{¿Qué es el lenguaje? Una respuesta simple}
 	\author{Norberto Moreno Quibén\\
-	       norberto.morenoquibe@uah.es}
+       norberto.morenoquibe@uah.es}
 	\date{}
 
     \begin{document}
