--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,16 @@
+@Article{Bentley2013Subject-canonic,
+author = {Bentley, Delia}, 
+title = {Subject canonicality and definiteness effects in romance there-sentences}, 
+journal = {Language}, 
+volume = {89}, 
+number = {4}, 
+pages = {675--712}, 
+year = {2013}, 
+abstract = {Evidence from main and lesser-known Romance languages indicates that the morphosyntactic properties of existential pivots correlate with semantic and pragmatic properties of noun phrases that count toward subjecthood to different degrees crosslinguistically. While fully supporting Beaver and colleagues (2005) theory of the definiteness effects, the findings of this research also suggest that the effects cannot be fully explained in a nonconstructional way.}, 
+keywords = {copula; copulative; existential, property, quantification, unergatives}}
+
+
+
 @InBook{Martin2019Predicates-of,
 author = {Martin, Fabienne and Carvalho, Janayna and Alexiadou, Artemis}, 
 title = {Predicates of personal taste and pancake sentences in Brazilian Portuguese and French}, 
