--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,13 @@
+@Book{Marin2004Entreserestar,
+author = {Marín, Rafael}, 
+title = {Entre ser y estar}, 
+publisher = {Arco Libros}, 
+address = {Madrid}, 
+year = {2004}, 
+abstract = {}, 
+keywords = {copula; estar; ser; copulative sentences; copula choice}}
+
+
 @Article{Bentley2013Subject-canonic,
 author = {Bentley, Delia}, 
 title = {Subject canonicality and definiteness effects in romance there-sentences}, 
