--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Book{		  marin2004entreserestar,
+  address	= {Madrid},
+  author	= {Mar{\'i}n, Rafael},
+  publisher	= {Arco Libros},
+  series	= {Cuadernos de lengua espa{\~n}ola 80},
+  title		= {Entre ser y estar},
+  year		= {2004}
+}
+
 @Article{	  fabregas2012,
   author	= {F{\'a}bregas, Antonio},
   journal	= {Borealis -- An International Journal of Hispanic
