--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -44967,3 +44967,11 @@
   year		= {2019},
   doi		= {10.5334/gjgl.721}
 }
+
+@Article{	  kittila2019general-knowled,
+  author	= {Kittil{\"a}, Seppo},
+  journal	= {Linguistics},
+  title		= {General knowledge as an evidential category},
+  year		= {2019},
+  doi		= {10.1515/ling-2019-0027}
+}
