--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -44975,3 +44975,19 @@
   year		= {2019},
   doi		= {10.1515/ling-2019-0027}
 }
+
+@Conference{	  moltmann2019truthmaker-sema,
+  author	= {Moltmann, Friederike},
+  booktitle	= {Looks, Attitudes, and Syntactic Embedding},
+  title		= {Truthmaker {Semantics} for {Intensional} {Transitive}
+		  {Verbs}},
+  year		= {2019}
+}
+
+@Book{		  moltmann2013abstract-object,
+  address	= {Oxford, United Kingdom},
+  author	= {Moltmann, Friederike},
+  publisher	= {Oxford University Press},
+  title		= {Abstract objects and the semantics of natural language},
+  year		= {2013}
+}
