result and copulative modified

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,16 @@
+@InBook{Green1997Romance-creoles,
+author = {Green, John N.}, 
+title = {Romance creoles}, 
+booktitle = {Romance languages}, 
+editor = {Harris, Martin and Vincent, Nigel}, 
+publisher = {Routledge}, 
+address = {London; NY}, 
+pages = {430-473}, 
+year = {1997}, 
+abstract = {}, 
+keywords = {Romance languages; copula; copulative}}
+
+
 @Book{Marin2004Entreserestar,
 author = {Marín, Rafael}, 
 title = {Entre ser y estar}, 
