--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,23 @@
 
+@InCollection{	  green1997romance-creoles,
+  address	= {London ; New York},
+  author	= {Green, John N.},
+  booktitle	= {Romance Languages},
+  editor	= {Harris, Martin and Vincent, Nigel},
+  pages		= {430-473},
+  publisher	= {Routledge},
+  title		= {Romance creoles},
+  year		= {1997}
+}
+
+@Book{		  harris1997romancelanguages,
+  address	= {London ; New York},
+  editor	= {Harris, Martin and Vincent, Nigel},
+  publisher	= {Routledge},
+  title		= {The {Romance} languages},
+  year		= {1997}
+}
+
 @Book{		  marin2004entreserestar,
   address	= {Madrid},
   author	= {Mar{\'i}n, Rafael},
@@ -44990,4 +45009,12 @@
   publisher	= {Oxford University Press},
   title		= {Abstract objects and the semantics of natural language},
   year		= {2013}
+}
+
+@Book{		  narahara2002the-japanese-co,
+  address	= {Basingstoke, Hampshire ; New York, N.Y},
+  author	= {Narahara, Tomiko},
+  publisher	= {Palgrave Macmillan},
+  title		= {The {Japanese} copula: forms and functions},
+  year		= {2002}
 }
