--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@PhDThesis{	  crespo2015affectingmeaningsubjectivity,
+  author	= {Crespo, In{\'e}s},
+  school	= {University of Amsterdam},
+  title		= {Affecting meaning: {Subjectivity} and evaluativity in
+		  gradable adjective},
+  year		= {2015}
+}
+
 @InCollection{	  green1997romance-creoles,
   address	= {London ; New York},
   author	= {Green, John N.},
@@ -45017,4 +45025,15 @@
   publisher	= {Palgrave Macmillan},
   title		= {The {Japanese} copula: forms and functions},
   year		= {2002}
+}
+
+@Article{	  crespo2019tasting-and-tes,
+  author	= {Crespo, In{\'e}s and Veltman, Frank},
+  journal	= {Linguistics and Philosophy},
+  number	= {6},
+  pages		= {617--653},
+  title		= {Tasting and testing},
+  volume	= {42},
+  year		= {2019},
+  doi		= {10.1007/s10988-019-09260-z}
 }
