--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,13 @@
+@Book{Morzycki2016Modification,
+author = {Morzycki, Marcin}, 
+title = {Modification}, 
+publisher = {Cambridge University Press}, 
+address = {Cambridge}, 
+year = {2016}, 
+abstract = {}, 
+keywords = {gradability, Absolute adjectives, Relative adjectives; comparative adjectives, Degree morphemes, Gradable adjectives, Language, literature and linguistics, Positive adjectives, Vagueness; copula; copulative}}
+
+
 @InBook{Green1997Romance-creoles,
 author = {Green, John N.}, 
 title = {Romance creoles}, 
