--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Book{		  morzycki2016modification,
+  address	= {Cambridge},
+  author	= {Morzycki, Marcin},
+  publisher	= {Cambridge University Press},
+  title		= {Modification},
+  year		= {2016}
+}
+
 @PhDThesis{	  crespo2015affectingmeaningsubjectivity,
   author	= {Crespo, In{\'e}s},
   school	= {University of Amsterdam},
@@ -45036,4 +45044,24 @@
   volume	= {42},
   year		= {2019},
   doi		= {10.1007/s10988-019-09260-z}
+}
+
+@Book{		  2016cambridge-semantics,
+  address	= {Cambridge},
+  editor	= {Aloni, Maria and Dekker, Paul},
+  publisher	= {Cambridge University Press},
+  series	= {Cambridge {Handbooks} in {Language} and {Linguistics}},
+  title		= {The {Cambridge} {Handbook} of {Formal} {Semantics}},
+  year		= {2016},
+  doi		= {10.1017/CBO9781139236157}
+}
+
+@Book{		  winter2016elements-of-for,
+  author	= {Winter, Yoad},
+  publisher	= {Edinburgh University Press},
+  title		= {Elements of {Formal} {Semantics}: {An} {Introduction} to
+		  the {Mathematical} {Theory} of {Meaning} in {Natural}
+		  {Language}: {Volume} undefined: {Edinburgh} {Advanced}
+		  {Textbooks} in {Linguistics}},
+  year		= {2016}
 }
