result and copulative modified

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,15 @@
+@Article{Bolinger1967Adjectives,
+author = {Bolinger, Dwight}, 
+title = {Adjectives in English: Attribution and predication}, 
+journal = {Lingua}, 
+volume = {18}, 
+number = {}, 
+pages = {1--34}, 
+year = {1967}, 
+keywords = {attributive adjectives; predicative adjectives; relative clauses; copula; copulative}}
+
+
+
 @Book{Morzycki2016Modification,
 author = {Morzycki, Marcin}, 
 title = {Modification}, 
