--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  bolinger1967adjectives,
+  author	= {Bolinger, Dwight},
+  journal	= {Lingua},
+  pages		= {1--34},
+  title		= {Adjectives in {English}: {Attribution} and predication},
+  volume	= {18},
+  year		= {1967},
+  doi		= {10.1016/0024-3841(67)90018-6}
+}
+
 @Book{		  morzycki2016modification,
   address	= {Cambridge},
   author	= {Morzycki, Marcin},
