result and copulative modified

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,16 @@
+@InBook{Irslinger2015More-tales-of-t,
+author = {Irslinger, Britta}, 
+title = {More tales of two copulas: The copula systems of Western European languages from a typological and diachronic perspective}, 
+booktitle = {Diachrony and Suppletion}, 
+editor = {Kim, Roland}, 
+publisher = {Baar-Verlag}, 
+address = {}, 
+pages = {}, 
+year = {2015}, 
+abstract = {}, 
+keywords = {copula; Copular sentences; copulative}}
+
+
 @Article{Bolinger1967Adjectives,
 author = {Bolinger, Dwight}, 
 title = {Adjectives in English: Attribution and predication}, 
