--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -45075,3 +45075,15 @@
 		  {Textbooks} in {Linguistics}},
   year		= {2016}
 }
+
+@Conference{	  irslinger2015more-tales-of-t,
+  author	= {Irslinger, Britta},
+  booktitle	= {Diachrony and Suppletion},
+  editor	= {Kim, Roland},
+  journal	= {Conference held in Prague, September 2015},
+  publisher	= {Baar-Verlag},
+  title		= {More tales of two copulas: {The} copula systems of
+		  {Western} {European} languages from a typological and
+		  diachronic perspective},
+  year		= {2015}
+}
