--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,18 @@
+@InBook{Bosque1999el-sintagma-adjetiva,
+  address	= {Madrid},
+  author	= {Bosque, Ignacio},
+  booktitle	= {{G}ram{\'a}tica {D}escriptiva de la {L}engua
+		  {E}spa{\~n}ola},
+  editor	= {Bosque, Ignacio and Demonte, Violeta},
+  organization	= {RAE},
+  pages		= {217-310},
+  publisher	= {Espasa},
+  title		= {El sintagma adjetival. Modificadores y complementos del
+		  adjetivo. Adjetivo y participio},
+  volume	= {1},
+  year		= {1999}
+}
+
 @InBook{Irslinger2015More-tales-of-t,
 author = {Irslinger, Britta}, 
 title = {More tales of two copulas: The copula systems of Western European languages from a typological and diachronic perspective}, 
