--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,31 @@
+@Incollection{Leborans1999Predicacion,
+author = {Fern{\'a}ndez Leborans, Mar{\'i}a Jos{\'e}}, 
+title = {La predicaci{\'o}n: las oraciones copulativas}, 
+booktitle = {{G}ram{\'a}tica {D}escriptiva de la {L}engua
+{E}spa{\~n}ola},
+editor = {Bosque, Ignacio and Demonte, Violeta}, 
+publisher = {Espasa-RAE}, 
+address = {Madrid}, 
+pages = {2354--2460}, 
+year = {1999}, 
+keywords = {predication; copulative; copula; predicative adjectives}}
+
+
+@InBook{Bosque1999el-sintagma-adjetiva,
+  address	= {Madrid},
+  author	= {Bosque, Ignacio},
+  booktitle	= {{G}ram{\'a}tica {D}escriptiva de la {L}engua
+		  {E}spa{\~n}ola},
+  editor	= {Bosque, Ignacio and Demonte, Violeta},
+  organization	= {RAE},
+  pages		= {217-310},
+  publisher	= {Espasa},
+  title		= {El sintagma adjetival. Modificadores y complementos del
+		  adjetivo. Adjetivo y participio},
+  volume	= {1},
+  year		= {1999}
+}
+
 @InBook{Irslinger2015More-tales-of-t,
 author = {Irslinger, Britta}, 
 title = {More tales of two copulas: The copula systems of Western European languages from a typological and diachronic perspective}, 
@@ -47,7 +75,7 @@ keywords = {Romance languages; copula; copulative}}
 
 
 @Book{Marin2004Entreserestar,
-author = {Marín, Rafael}, 
+author = {Mar{\'i}n, Rafael}, 
 title = {Entre ser y estar}, 
 publisher = {Arco Libros}, 
 address = {Madrid}, 
@@ -97,7 +125,7 @@ keywords = {Copular sentences, evaluativity, Individual level predicates}}
 
 
 @InBook{Saez2005Sluicing,
-author = {Sáez, Luis}, 
+author = {S{\'a}ez, Luis}, 
 title = {Sluicing with copula}, 
 booktitle = {Theoretical and Experimental Approaches to Romance Linguistics: Selected papers from the 34th Linguistic Symposium on Romance Languages ({LSRL}), Salt Lake City, March 2004}, 
 editor = {Gess, Randall and Rubin, Edward J}, 
@@ -109,7 +137,7 @@ abstract = {},
 keywords = {sluicing, ellipsis}}
 
 @InBook{Marin2017Towards-a-Unifi,
-author = {Marín, Rafael and Arche, María J. and Fábregas, Antonio}, 
+author = {Mar{\'i}n, Rafael and Arche, Mar{\'i}a J. and F{\'a}bregas, Antonio}, 
 title = {Towards a Unified Treatment of Spanish Copulas}, 
 booktitle = {Romance Languages and Linguistic Teory 11. Selected Papers from the 44th Linguistic Symposium on Romance Languages ({LSRL})}, 
 editor = {Perpiñán, Silvia and Heap, David and Moreno-Villamar, Itziar and Soto-Corominas, Adriana}, 
@@ -133,9 +161,9 @@ abstract = {},
 keywords = {}}
 
 @Article{Perez-Jimenez2018SER-Y-ESTAR-EN-,
-author = {Pérez-Jiménez, Isabel and Gumiel-Molina, Silvia and Moreno-Quibén, Norberto}, 
+author = {P{\'e}rez-Jim{\'e}nez, Isabel and Gumiel-Molina, Silvia and Moreno-Quib{\'e}n, Norberto}, 
 title = {Ser y estar en las lenguas romances ibéricas: las oraciones copulativas con atributo adjetival}, 
-journal = {Revista española de lingüística (RSEL)}, 
+journal = {Revista española de ling{\¨u}{\'i}stica (RSEL)}, 
 volume = {48}, 
 number = {1}, 
 pages = {}, 
@@ -208,7 +236,7 @@ keywords = {Copula Choice; Copular sentences}}
 
 
 @InBook{Gumiel-Molina2015The-inference-of-tem,
-author = {Gumiel-Molina, Silvia and Moreno-Quibén, Norberto and Pérez-Jiménez, Isabel}, 
+author = {Gumiel-Molina, Silvia and Moreno-Quib{\'e}n, Norberto and P{\'e}rez-Jim{\'e}nez, Isabel}, 
 title = {The inference of temporal persistence and the individual/stage level distinction: the case of ser vs. estar in Spanish}, 
 booktitle = {New Perspectives on the Study of Ser and Estar}, 
 editor = {Pérez-Jiménez, Isabel and Leonetti, Manuel and Gumiel-Molina, Silvia}, 
