--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,16 @@
+@Article{Bosque1993Catafora,
+author = {Bosque, Ignacio}, 
+title = {Este es un ejemplo de predicaci{\'o}n cataf{\'o}rica}, 
+journal = {Cuadernos de lingü{\'i}stica del {Instituto} {Universitario} {Ortega} y {Gasset}}, 
+volume = {1}, 
+number = {}, 
+pages = {27--57}, 
+year = {1993}, 
+location = {}, 
+keywords = {copula; copulative; cataphora; anaphora; predication}}
+
+
+
 @Incollection{Leborans1999Predicacion,
 author = {Fern{\'a}ndez Leborans, Mar{\'i}a Jos{\'e}}, 
 title = {La predicaci{\'o}n: las oraciones copulativas}, 
