--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  bosque1993catafora,
+  author	= {Bosque, Ignacio},
+  journal	= {Cuadernos de ling{\"u}{\'i}stica del Instituto
+		  Universitario Ortega y Gasset},
+  pages		= {27--57},
+  title		= {Este es un ejemplo de predicaci{\'o}n cataf{\'o}rica},
+  volume	= {1},
+  year		= {1993}
+}
+
 @Article{	  bolinger1967adjectives,
   author	= {Bolinger, Dwight},
   journal	= {Lingua},
