--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,343 @@
+@Article{Jacobson1995Binding-Connect,
+author = {Jacobson, Pauline}, 
+title = {Binding Connectivity in Copular Sentences}, 
+journal = {Proceedings of SALT}, 
+volume = {4}, 
+number = {}, 
+pages = {18}, 
+year = {1995}, 
+abstract = {}, 
+location = {}, 
+keywords = {connectivity effects; copula; copular sentences}}
+
+
+
+@Article{Rothstein1999Fine-Grained-St,
+author = {Rothstein, Susan}, 
+title = {Fine-Grained Structure In The Eventuality Domain: The Semantics Of Predicative Adjective Phrases And Be}, 
+journal = {Natural Language Semantics}, 
+volume = {7}, 
+number = {4}, 
+pages = {347--420}, 
+year = {1999}, 
+location = {}, 
+keywords = {small clauses; predication; copula; copulative sentences}}
+
+
+
+@Article{Doron2009The-semantics-o,
+author = {Doron, Edit}, 
+title = {The semantics of predicate nominals}, 
+journal = {Linguistics}, 
+volume = {26}, 
+number = {2}, 
+pages = {281--302}, 
+year = {2009}, 
+abstract = {}, 
+location = {}, 
+keywords = {copula; predication; copulative sentences}}
+
+
+
+@Article{Sharvit2009Revisiting-Conn,
+author = {Sharvit, Yael}, 
+title = {Revisiting Connectivity in Copular Sentences}, 
+journal = {Proceedings of SALT}, 
+volume = {19}, 
+number = {}, 
+pages = {427--445}, 
+year = {2009}, 
+abstract = {No abstract.}, 
+location = {}, 
+keywords = {copula; copulative sentences; connectivity effects}}
+
+
+
+@Article{Schlenker2003Clausal-Equatio,
+author = {Schlenker, Philippe}, 
+title = {Clausal Equations (A Note on the Connectivity Problem)}, 
+journal = {Natural Language \& Linguistic Theory}, 
+volume = {21}, 
+number = {1}, 
+pages = {157--214}, 
+year = {2003}, 
+keywords = {copula; connectivity effects; copulative}}
+
+
+
+
+@Article{Sharvit1999Connectivity-in-Spec,
+author = {Sharvit, Yael}, 
+title = {Connectivity in Specificational Sentences}, 
+journal = {Natural Language Semantics}, 
+volume = {7}, 
+number = {3}, 
+pages = {299--339}, 
+year = {1999}, 
+keywords = {copulative; connectivity effects; copula}}
+
+
+
+
+@Article{Zagona2013Ser-and-estar,
+author = {Zagona, Karen}, 
+title = {Ser and estar: Phrase structure and aspect}, 
+journal = {Cahiers Chronos}, 
+volume = {25}, 
+number = {}, 
+pages = {303--328}, 
+year = {2013}, 
+abstract = {}, 
+location = {}, 
+keywords = {copula; copula choice; copular sentences}}
+
+
+
+
+@Article{Brucart2017Copular-alterna,
+author = {Brucart, Jos{\'e} Mar{\'i}a}, 
+title = {Copular alternation in Spanish and Catalan attributive sentences}, 
+journal = {Lingu{\'i}stica: Revista de Estudos Lingu{\'i}sticos da Universidade do Porto}, 
+volume = {7}, 
+number = {}, 
+pages = {9--43}, 
+year = {2017}, 
+keywords = {copula; Copula Choice; copular sentences}}
+
+
+
+
+@Article{Lujan1981The-Spanish-cop,
+author = {Luj{\'a}n, Marta}, 
+title = {The Spanish copulas as aspectual indicators}, 
+journal = {Lingua}, 
+volume = {54}, 
+number = {2}, 
+pages = {165--210}, 
+year = {1981}, 
+abstract = {}, 
+location = {}, 
+keywords = {copula; Copular sentences; copulative sentences}}
+
+
+
+@Article{Hengeveld2009Copular-verbs,
+author = {Hengeveld, Kees}, 
+title = {Copular verbs in a functional grammar of Spanish}, 
+journal = {Linguistics}, 
+volume = {24}, 
+number = {2}, 
+pages = {393--420}, 
+year = {2009}, 
+abstract = {}, 
+location = {}, 
+keywords = {copula; Copular sentences}}
+
+
+
+@InBook{Camacho2012Ser-and-estar,
+author = {Camacho, Jose}, 
+title = {Ser and estar: The individual/stage-level distinction and aspectual predication}, 
+booktitle = {The handbook of Hispanic linguistics}, 
+editor = {Hualde, José Ignacio and Olarrea, Antxon and O`Rourke, Erin}, 
+publisher = {Blackwell}, 
+address = {Malden, MA}, 
+pages = {453-476}, 
+year = {2012}, 
+abstract = {}, 
+keywords = {copula; Copular sentences; copulative sentences}}
+
+
+@phdthesis{Doron1983Verbless-predic,
+author = {Doron, Edit}, 
+title = {Verbless predicates in Hebrew}, 
+school = {Universite of Texas at Austin}, 
+address = {Austin}, 
+pages = {}, 
+year = {1983}, 
+abstract = {}, 
+keywords = {copula; predication; copulative sentences}}
+
+
+
+@Article{Citko2008Small-clauses,
+author = {Citko, Barbara}, 
+title = {Small clauses reconsidered: Not so small and not all alike}, 
+journal = {Lingua}, 
+volume = {118}, 
+number = {3}, 
+pages = {261--295}, 
+year = {2008}, 
+keywords = {Defective categories; Pronominal copula; small clauses; Verbal copula}}
+
+
+
+
+@InBook{DeGraff1992The-syntax-of-p,
+author = {DeGraff, Michel}, 
+title = {The syntax of predication in Haitian}, 
+booktitle = {Proceedings of {NELS} 22}, 
+editor = {}, 
+publisher = {Graduate Linguistic Student Publications, Univ. of Massachusetts}, 
+address = {Amherst}, 
+pages = {103-117}, 
+year = {1992}, 
+abstract = {}, 
+keywords = {copula; Copular sentences; creole}}
+
+
+@InBook{Lohndal2009Copula-cycle,
+author = {Lohndal, Terje}, 
+title = {The Copula cycle}, 
+booktitle = {Cyclical Change}, 
+editor = {van Gelderen, Elly}, 
+publisher = {John Benjamins Pub. Co}, 
+address = {}, 
+pages = {209-242}, 
+year = {2009}, 
+abstract = {}, 
+keywords = {copula; Copular sentences; Linguistic change}}
+
+
+@InBook{Gelderen2011The-Pronominal,
+author = {Gelderen, Elly van}, 
+title = {The Pronominal Copula Cycle}, 
+booktitle = {The Linguistic Cycle: Language Change and the Language Faculty}, 
+editor = {}, 
+publisher = {Oxford University Press}, 
+address = {}, 
+pages = {128-144}, 
+year = {2011}, 
+keywords = {copula; copulative; Copular sentences; Linguistic change}}
+
+
+@Article{Cook1999Hawaiian-He-o-a,
+author = {Cook, Kenneth William}, 
+title = {Hawaiian He, 'o, and I: Copular Verbs, Prepositions, or Determiners?}, 
+journal = {Oceanic Linguistics}, 
+volume = {38}, 
+number = {1}, 
+pages = {43--65}, 
+year = {1999}, 
+keywords = {copula; copulative; Copular sentences}}
+
+
+
+@Article{Citko2011Small-Clauses,
+author = {Citko, Barbara}, 
+title = {Small Clauses}, 
+journal = {Language and Linguistics Compass}, 
+volume = {5}, 
+number = {10}, 
+pages = {748--763}, 
+year = {2011}, 
+keywords = {small clauses; predication; copulative; copula}}
+
+
+
+@Article{Hazout2010Verbless-Sentences-a,
+author = {Hazout, Ilan}, 
+title = {Verbless Sentences and Clause Structure}, 
+journal = {Linguistic Inquiry}, 
+volume = {41}, 
+number = {3}, 
+pages = {471--485}, 
+year = {2010}, 
+keywords = {small Clause; predication; copulative; copula}}
+
+
+
+@InBook{Gueron2003On-the-asymmetr,
+author = {Guéron, Jacqueline}, 
+title = {On the asymmetry of the specificational copula sentence}, 
+booktitle = {Asymmetry in grammar}, 
+editor = {Di Sciullo, Anna Maria}, 
+publisher = {John Benjamins}, 
+address = {Amsterdam}, 
+pages = {145-163}, 
+year = {2003}, 
+abstract = {}, 
+keywords = {Specificational sentences; copulatives; copula}}
+
+@InBook{Heycock1994The-Internal-St,
+author = {Heycock, Caroline}, 
+title = {The Internal Structure of Small Clauses: New Evidence from Inversion}, 
+booktitle = {Proceedings of {NELS} 25}, 
+editor = {}, 
+publisher = {}, 
+address = {}, 
+pages = {223-238}, 
+year = {1994}, 
+
+keywords = {copulative; copula; Specificational sentences; small clauses}}
+
+
+
+@Article{Eide1999the-syntactic-d,
+  author	= {Eide, Kristin M. and {\AA}farli, Tor A.},
+  journal	= {Studia Linguistica},
+  number	= {2},
+  pages		= {155--181},
+  title		= {The {Syntactic} {Disguises} of the {Predication}
+		  {Operator}},
+  volume	= {53},
+  year		= {1999},
+  doi		= {10.1111/1467-9582.00043}
+  }
+
+@InBook{Matushansky2007A-Case-Study-of,
+author = {Matushansky, Ora}, 
+title = {A Case Study of Predication}, 
+booktitle = {Proceedings of {FDSL} 6.5}, 
+editor = {}, 
+publisher = {}, 
+address = {}, 
+pages = {}, 
+year = {2007}, 
+abstract = {}, 
+keywords = {copula; copulative; predication; case}}
+
+
+
+@InBook{Bowers2001Predication,
+author = {Bowers, John}, 
+title = {Predication}, 
+booktitle = {The handbook of contemporary syntactic theory}, 
+editor = {Baltin, Mark and Collins, Chris}, 
+publisher = {Blackwell}, 
+address = {Malden, MA}, 
+pages = {299-333}, 
+year = {2001}, 
+abstract = {}, 
+keywords = {predication; copula; copulative}}
+
+
+@InBook{Mikkelsen2011Copular-clauses,
+author = {Mikkelsen, Line}, 
+title = {Copular clauses}, 
+booktitle = {Semantics: An international handbook of natural language meaning}, 
+editor = {von Heusinger, Klaus and Maienborn, Claudia and Portner, Paul}, 
+publisher = {Mouton de Gruyter}, 
+address = {Berlin}, 
+pages = {1805-1805}, 
+year = {2011}, 
+abstract = {}, 
+keywords = {semantics; predication; copulative, copula}}
+
+
+@InBook{Dikken2005Specificational,
+author = {den Dikken, Marcel}, 
+title = {Specificational copular sentences and pseudoclefts}, 
+booktitle = {The {Blackwell} companion to syntax}, 
+editor = {Everaert, Martin and van Riemsdijk, Henk}, 
+publisher = {Blackwell}, 
+address = {Malden, MA}, 
+pages = {292-409}, 
+year = {2005}, 
+abstract = {}, 
+keywords = {Specificational sentences; copulative; copula}}
+
+
 @Article{Bosque1993Catafora,
 author = {Bosque, Ignacio}, 
 title = {Este es un ejemplo de predicaci{\'o}n cataf{\'o}rica}, 
