--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,13 @@
+@Book{Declerck2011Studies-on-Copu,
+author = {Declerck, Renaat}, 
+title = {Studies on Copular Sentences, Clefts and Pseudo-Clefts}, 
+publisher = {De Gruyter Mouton}, 
+address = {Berlin, Boston}, 
+year = {2011}, 
+abstract = {}, 
+keywords = {copula; copular sentences; Specificational sentences; copulative}}
+
+
 @Article{Jacobson1995Binding-Connect,
 author = {Jacobson, Pauline}, 
 title = {Binding Connectivity in Copular Sentences}, 
